--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </tr>
             <tr>
               <td>Totale</td>
-              <td></td>
+              <td>&nbsp;</td>
               <td>360&euro;</td>
             </tr>
           </tbody>
